<resources>
    <string name="app_name">"FakeNewsGroup"</string>
    <string name="subscribe">Subscribe</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="newsgroupseverprompt">Choose a NewsGroupServer.</string>
    <string name="answer">Answer</string>
    <string name="articles">Articles</string>
    <string name="newsgroupprompt">Choose a Newsgroup</string>

    <string-array name="newsgroupservers">
        <item>news.tugraz.at</item>
    </string-array>

    <string name="title_activity_login">Login</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="noaccountprompt">No account yet? Create one</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_forename">Forename</string>
    <string name="prompt_passwordrep">Password repeat</string>
    <string name="action_register">Register</string>
    <string name="alreadyregisterdprompt">Already registered? Login</string>
    <string name="error_passwords_not_equal">Passwords not equal</string>

    <string name="title_activity_settings">Settings</string>
    <string name="settings_forename">Forename</string>
    <string name="settings_surname">Surname</string>
    <string name="settings_email">Email</string>

    <string name="subscribe_heading">News Server:</string>
    <string name="article_text">Article Text:</string>
    <string name="subject">Subject:</string>

    <string name="search_hint">Search</string>

    <string name="post_from">Forename Surname</string>
    <string name="post_const_from">From:</string>
</resources>

