<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.freeteam01.androidnewsgroupreader.SubscribeActivity">

    <TextView
        android:id="@+id/tv_newsserver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/subscribe_heading" />

    <Spinner
        android:id="@+id/spin_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/newsgroupseverprompt" />

    <ListView
        android:id="@+id/lv_newsgroups"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>
